"fixed update product on admin dash"